# CMake-CUnit

./: CMakeLists.txt  README.md  add.h  main.c  test.c
include/: divide.h
src/: CMakeLists.txt  add.c  divide.c  main.c
